--- a/dom-scraper/manifest.json
+++ b/dom-scraper/manifest.json
@@ -1,8 +1,11 @@
 {
-  "manifest_version":2,
-  "name":"Scraping for an Preview",
-  "version":"1.0",
+  "manifest_version":3,
+  "name":"Scraping for a Preview",
+  "version":"1.1",
   "description":"Use this in the Email Previews tab of Litmus to extract the generated preview markup, which contains the source URL of the screenshots.",
+  "permissions": [
+    "storage"
+  ],
   "content_scripts":[
     {
       "matches":[
@@ -12,9 +15,9 @@
     }
   ],
   "background": {
-    "scripts":["background.js"]
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "icon.png"
   }
 }
